# python-poetry-template

./: .gitignore  README.md  pyproject.toml  pytest.ini
tests/: test_calculator.py
