[tool.poetry]
name = "python-template" # FIXME: Change this to your project name
version = "0.1.0"
description = "A template for python projects with poetry as package manager" # FIXME: Change this to your project description
authors = ["Soaibuzzaman <soaibuzzaman@uni-weimar.de>"] # FIXME: Change this to your name and email
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.3"
pytest-html = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"